--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/alfarizi.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PORTFOLIO | ALIF ALFARIZI</title>
+    
+    <!-- Open Graph Meta Tags untuk Share Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Alif Alfarizi - Web Developer" />
+    <meta property="og:description" content="Fresh graduate in Computer and Network Engineering. Experienced web developer with expertise in PHP, CodeIgniter, React, and more." />
+    <meta property="og:image" content="/profil_alif_alfarizi.jpg" />
+    <meta property="og:url" content="https://alifalfariziportfolio.netlify.app/" />
+    <meta property="og:site_name" content="Alif Alfarizi Portfolio" />
   </head>
   <body>
     <div id="root"></div>
