--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Alif Alfarizi - Web Developer" />
     <meta property="og:description" content="Fresh graduate in Computer and Network Engineering. Experienced web developer with expertise in PHP, CodeIgniter, React, and more." />
-    <meta property="og:image" content="/profil_alif_alfarizi.jpg" />
+    <meta property="og:image" content="https://alifalfariziportfolio.netlify.app/profil_alif_alfarizi.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:url" content="https://alifalfariziportfolio.netlify.app/" />
     <meta property="og:site_name" content="Alif Alfarizi Portfolio" />
   </head>
